# milteck

./: README.md
dz1/: ammo_data.txt  input.txt  main  main.cpp  output.txt  projectile_trajectory.json  report.txt  tests.cpp  tests_runner
dz2/: Makefile  drone_sim  input.txt  main.cpp  simulation.txt  targets.txt
dz3/: Makefile  ammo.json  config.json  drone_sim  main.cpp  projectile_gliding_rkg.json  projectile_gliding_vog.json  projectile_m67.json  projectile_rkg_3.json  projectile_vog_17.json  readme.txt  run_all.sh  simulation.json  simulation_gliding_rkg.json  simulation_gliding_vog.json  simulation_m67.json  simulation_rkg_3.json  simulation_vog_17.json  targets.json
dz3/viewer/: CMakeLists.txt  viewer.cpp
